--- a/DaoTest/build.gradle
+++ b/DaoTest/build.gradle
@@ -4,14 +4,14 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.android.tools.build:gradle:0.13.3'
     }
 }
 
 apply plugin: 'android'
 
 dependencies {
-    compile project(':DaoGenerator')
+    androidTestCompile project(':DaoCore')
 }
 
 android {
